@@ -144,7 +144,9 @@ class RDFXMLHandler(handler.ContentHandler):
                     num +=1
                 ns_prefix[uri] = new_prefix
                 prefix_ns[new_prefix] = uri
-        else:
+        elif uri not in ns_prefix: # Only if we do not already have a
+				   # binding. So we do not clobber
+				   # things like rdf, rdfs
             ns_prefix[uri] = prefix
             prefix_ns[prefix] = uri
 
